# outomail

./: .gitignore  LICENSE  README.md  run.sh  uninstall.sh  디자인할때이거참고.md
outomail/: .env.example  =0.36.0  AGENT.md  Containerfile  docker-compose.yml  entrypoint.sh  outomail.service  pyproject.toml
outomail/app/: auth.py  config.py  db.py  main.py  models.py
outomail/app/dns/: dkim.py  records.py
outomail/app/imap/: backend.py  login.py  mailbox.py  server.py
outomail/app/routers/: auth.py  mailboxes.py  messages.py  settings.py
outomail/app/smtp/: auth.py  delivery.py  handler.py  server.py
outomail/app/storage/: messages.py
outomail/app/tls/: certbot.py
outomail/migrations/: 001_initial.sql
outomail/static/: app.js  index.html  style.css
