[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "outomail"
version = "0.1.0"
description = "Self-hosted mail server with REST API"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "outomail contributors" },
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosmtpd>=1.4.4",
    "pymap>=0.36.0",
    "aiosqlite>=0.19.0",
    "dkimpy>=1.1.8",
    "checkdmarc>=5.0.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.6",
    "dnspython>=2.4.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.scripts]
outomail = "app.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
